--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,13 +1,12 @@
 * {
-    background-color: beige;
+    background-color: #F4dAAA;
 }
 
 .logo{
     width: 50px;
     height: 50px;
     background-image: url("../images/Leeds_United_Fc_Black.png");
-    padding-left: 20px;
-    padding-top: 20px;
+
 }
 
 body {
@@ -15,9 +14,14 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.pbody{
+    margin: 10px;
+    display: grid;
+}
+
 h1 {
     font-size: 72px;
-    background: -webkit-linear-gradient(#ff0000, #00eeff);
+    background: -webkit-linear-gradient(#000000, #00eeff);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
